# hin2n

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  README.md  README_zh.md  link.bat  n2n_v2
An2n/: .gitignore  CHANGELOG  CHANGELOG_zh  build.gradle  gradle.properties
An2n/app/: An2n.jks.enc  CMakeLists.txt  build.gradle
An2n/app/src/androidTest/java/wang/switchy/an2n/: ExampleInstrumentedTest.java
An2n/app/src/main/: AndroidManifest.xml
An2n/app/src/main/cpp/: n2n_v2s
An2n/app/src/main/cpp/tun2tap/: tun2tap.h  tun2tap_appdef.h
An2n/app/src/main/res/layout/: activity_add_item.xml  activity_main.xml  activity_setting_list.xml  layout_setting_item.xml  main_template_view.xml
An2n/app/src/main/res/values/: strings.xml
An2n/gradle/wrapper/: gradle-wrapper.properties
Hin2n_android/: .gitignore  CHANGELOG  CHANGELOG_zh  build.gradle  gradle.properties
Hin2n_android/app/: CMakeLists.txt  Hin2n.jks.enc  build.gradle
Hin2n_android/app/src/main/: AndroidManifest.xml
Hin2n_android/app/src/main/cpp/: n2n_v1  n2n_v2  n2n_v2s  n2n_v3  slog  tun2tap  uip
Hin2n_android/app/src/main/cpp/edge_jni/: edge_android_v2.c  edge_jni.c  edge_jni.h  tuntap_android_v2.c
Hin2n_android/app/src/main/cpp/n2n_v1/: edge.c
Hin2n_android/app/src/main/cpp/n2n_v1/android/: tuntap_android.c
Hin2n_android/app/src/main/cpp/n2n_v1/win32/DotNet/supernode/: supernode.vcproj
Hin2n_android/app/src/main/cpp/n2n_v2/: edge_utils.c  n2n.c  n2n.h
Hin2n_android/app/src/main/cpp/n2n_v2/android/: edge_android.c  tuntap_android.c
Hin2n_android/app/src/main/cpp/n2n_v2/win32/: n2n_win32.h
Hin2n_android/app/src/main/cpp/n2n_v2s/: edge.c  n2n.c  n2n.h
Hin2n_android/app/src/main/java/wang/switchy/hin2n/: Hin2nApplication.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/activity/: AboutActivity.java  BaseActivity.java  ListActivity.java  MainActivity.java  SettingDetailsActivity.java  WebViewActivity.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/adapter/: SettingItemAdapter.java  TermAdapter.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/entity/: SettingItemEntity.java  SettingItemEvtity.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/model/: EdgeCmd.java  EdgeStatus.java  N2NSettingInfo.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/receiver/: BootCompletedReceiver.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/service/: N2NService.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/storage/db/base/: DaoMaster.java  N2NSettingModelDao.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/storage/db/base/model/: N2NSettingModel.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/template/: BaseTemplate.java  CommonTitleTemplate.java  MainTitleTemplate.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/tool/: IOUtils.java  LogFileObserver.java  N2nTools.java  ShareUtils.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/wxapi/: WXEntryActivity.java
Hin2n_android/app/src/main/res/drawable/: menu_item_background.xml  radio_button_selector.xml  titlebar_icon_return_selector.xml
Hin2n_android/app/src/main/res/layout/: activity_about.xml  activity_add_item.xml  activity_main.xml  activity_main_land.xml  activity_main_old.xml  activity_setting_list.xml  com_facebook_activity_layout.xml  com_facebook_login_fragment.xml  layout_setting_item.xml  main_template_view.xml  term_line_tv.xml
Hin2n_android/app/src/main/res/values/: colors.xml  encryption_modes.xml  item_default_values.xml  strings.xml  styles.xml
Hin2n_android/app/src/test/java/wang/switchy/hin2n/: ExampleUnitTest.java
Hin2n_android/gradle/wrapper/: gradle-wrapper.properties
bundles/slog/: slog.c
doc/: CopyrightNotice.md  OpenSSL.md
(+28 files in other folders)
